--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,7 @@ group 'com.apptreesoftware.barcodescan'
 version '1.0-SNAPSHOT'
 
 buildscript {
+ext.kotlin_version = '1.3.0'
     repositories {
         google()
         jcenter()
@@ -9,7 +10,7 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.20"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
